feat: add acknowledgement section for mentors and bootcamp peers

--- a/index.html
+++ b/index.html
@@ -808,6 +808,36 @@
             </div>
         </section>
 
+        <!-- 致谢 / 同行者 -->
+        <section class="mb-20">
+            <div
+                class="ink-card rounded-xl p-10 text-center relative overflow-hidden group hover:shadow-lg transition-all duration-500">
+                <!-- 背景流光 -->
+                <div
+                    class="absolute inset-0 bg-gradient-to-r from-cinnabar/5 via-gold/5 to-jade/5 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
+                </div>
+
+                <!-- 装饰图标 -->
+                <div class="mb-6 animate-float">
+                    <span
+                        class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-ink-50 border border-ink-100">
+                        <i class="fas fa-heart text-cinnabar text-opacity-80"></i>
+                    </span>
+                </div>
+
+                <!-- 核心文字 -->
+                <h3
+                    class="text-xl sm:text-2xl md:text-3xl font-bold text-ink-800 brush-text leading-relaxed relative z-10">
+                    龙龙老师，云舒老师，小橙酱，助教，<br class="hidden sm:block" />训练营的小伙伴们！
+                </h3>
+
+                <!-- 副标题 -->
+                <p class="mt-4 text-ink-500 font-serif text-sm tracking-widest uppercase opacity-80">
+                    Thanks for being part of my journey
+                </p>
+            </div>
+        </section>
+
         <!-- 底部 -->
         <footer class="text-center py-12 border-t border-ink-200 relative">
             <!-- 山水装饰 -->
